--- a/book_sample_fe/src/book/show_books.css
+++ b/book_sample_fe/src/book/show_books.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px;
     padding: 20px;
     height: 40px;
     background-color: #fff;
@@ -16,7 +15,7 @@
   .container_show_books {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
-    grid-auto-rows: 180px;
+    grid-auto-rows: 200px;
     grid-gap: 20px;
     margin: 20px;
   }
@@ -46,6 +45,15 @@
     padding: 5px;
   }
 
+  .book_info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding: 5px;
+  }
+
   .book_title {
     /* padding: 3px; */
     text-align: center;
@@ -65,7 +73,7 @@
     background-color: whitesmoke;
   } */
 
-  .select_genre{
+  .book_select_genre{
     padding: 10px;
     width: 35%;
     border-radius: 4px;
@@ -79,13 +87,15 @@
     background-color: #fff;
     color: rgb(28, 165, 200);
     font-weight: bold;
+    margin-right: 5px;
+    cursor:pointer;
   }
-  .input-container {
+  .book_input-container {
     display: flex;
     width: 40%;
   }
   
-  .input-field {
+  .book_input-field {
     flex: 1;
     padding: 10px;
     border: 0.3px solid #ccc;
@@ -93,7 +103,7 @@
     position: relative;
   }
   
-  .search_button {
+  .book_search_button {
     padding: 10px 20px;
     background-color: #ccc;
     color: white;
