--- a/book_sample_fe/src/genre/show_genres.css
+++ b/book_sample_fe/src/genre/show_genres.css
@@ -35,3 +35,27 @@
     border-radius: 0px 0px 4px 4px;
     border-bottom: 1px solid #ccc;
 }
+
+.genre_input-container {
+    display: flex;
+    width: 40%;
+    margin-bottom: 0px;
+  }
+  
+  .genre_input-field {
+    flex: 1;
+    padding: 10px;
+    border: 0.3px solid #ccc;
+    border-radius: 4px  0px 0px 4px;
+    position: relative;
+  }
+  
+  .genre_search_button {
+    padding: 10px 20px;
+    background-color: #ccc;
+    color: white;
+    border: none;
+    border: 1px solid #ccc;
+    border-radius: 0px 4px 4px 0px;
+    cursor: pointer; /* Add some space between input field and button */
+  }
